Fix Scout Mode navigation - menu now closes properly, cleanup integrated

--- a/public/index.html
+++ b/public/index.html
@@ -30,25 +30,25 @@
             <button id="card-menu-close-btn" class="btn-close"></button>
         </div>
         <div id="universal-menu-items">
-            <a href="/" class="card-menu-item text-decoration-none" data-route>
+            <a href="/" class="card-menu-item text-decoration-none" data-route data-route-mobile>
                 <i class="fas fa-home"></i>
                 <div class="card-menu-text">
                     <h5 class="card-menu-title">Home</h5>
                 </div>
             </a>
-            <a href="/how-it-works" class="card-menu-item text-decoration-none" data-route>
+            <a href="/how-it-works" class="card-menu-item text-decoration-none" data-route data-route-mobile>
                 <i class="fas fa-question-circle"></i>
                 <div class="card-menu-text">
                     <h5 class="card-menu-title">How It Works</h5>
                 </div>
             </a>
-            <a href="/get-started" class="card-menu-item text-decoration-none" data-route>
+            <a href="/get-started" class="card-menu-item text-decoration-none" data-route data-route-mobile>
                 <i class="fas fa-rocket"></i>
                 <div class="card-menu-text">
                     <h5 class="card-menu-title">Get Started</h5>
                 </div>
             </a>
-            <a href="/scout" class="card-menu-item text-decoration-none" data-route>
+            <a href="/scout" class="card-menu-item text-decoration-none" data-route data-route-mobile>
                 <i class="fas fa-search-location"></i>
                 <div class="card-menu-text">
                     <h5 class="card-menu-title">About Scouting</h5>
@@ -57,7 +57,7 @@
         </div>
         <div id="curator-nav-menu-items" class="d-none">
              <hr style="border-color: rgba(255,255,255,0.2);">
-             <a href="/curator-panel" class="card-menu-item text-decoration-none" data-route>
+             <a href="/curator-panel" class="card-menu-item text-decoration-none" data-route data-route-mobile>
                 <i class="fas fa-tachometer-alt"></i>
                 <div class="card-menu-text">
                     <h5 class="card-menu-title">Dashboard</h5>
