--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,14 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <meta name="theme-color" content="#005F60">
-    <title>Headstone Legacy</title>
+    <meta name="description" content="Create beautiful digital memorials and preserve family legacies with Headstone Legacy. GPS-precise cemetery locations, family trees, and QR codes for headstones.">
+    <title>Headstone Legacy - Digital Memorials & Family History</title>
     <link rel="manifest" href="/manifest.json">
-    <link rel="icon" href="/favicon.png" type="image/png">
-    <link rel="apple-touch-icon" href="/images/icons/icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="/images/icons/icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="/images/icons/icon-512x512.png">
+    <link rel="icon" type="image/png" href="/favicon.png">
+    <link rel="apple-touch-icon" sizes="192x192" href="/images/icons/icon-192x192.png">
+    <link rel="apple-touch-icon" sizes="512x512" href="/images/icons/icon-512x512.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="/css/styles.css">
