CRITICAL FIX #4: Add immediate file size validation before photo upload processing

--- a/public/pages/memorial-form.html
+++ b/public/pages/memorial-form.html
@@ -95,11 +95,13 @@
              <div class="mb-3">
                 <label for="main-photo" class="form-label">Main Photo</label>
                 <input type="file" class="form-control" id="main-photo" accept="image/*" capture="environment">
+                <small class="form-text text-muted">Maximum file size: 10MB</small>
                 <div id="main-photo-preview" class="row mt-2"></div>
             </div>
             <div class="mb-3">
                 <label for="memorial-photos" class="form-label">Photo Gallery</label>
                 <input type="file" class="form-control" id="memorial-photos" accept="image/*" capture="environment" multiple>
+                <small class="form-text text-muted">Maximum 20 photos, 10MB each</small>
                 <div id="photos-preview" class="row mt-2"></div>
             </div>
         </div>
