MAJOR STRATEGIC PIVOT: QR Tag-Focused Homepage and Product Marketing - Complete homepage transformation with QR tag value proposition, removed embarrassing demo content, enhanced order page with trust signals

--- a/public/pages/home.html
+++ b/public/pages/home.html
@@ -2,26 +2,155 @@
   <img src="/logo1.png" alt="Headstone Legacy"
      class="hero-logo mb-3"
      style="width:200px;max-width:60vw;height:auto;">
-  <h1 class="display-5 fw-bold mb-3">
-  Unlock Their Story.<br>Share Their Life.
-</h1>
-  <p class="lead text-muted mx-auto mb-4" style="max-width: 800px;">
-    Turn a headstone into a living memorial with photos, stories, and a scannable tag.
-    Create, curate, and share a legacy in minutes.
+  <h1 class="display-4 fw-bold mb-3" style="color: var(--primary-color);">
+    Your loved one's story deserves more<br>than a name and two dates.
+  </h1>
+  <p class="lead mx-auto mb-2" style="max-width: 700px; font-size: 1.25rem; color: #333;">
+    Create a beautiful digital memorial with photos, stories, and family connections.
+  </p>
+  <p class="lead mx-auto mb-4" style="max-width: 700px; font-size: 1.25rem; color: #333;">
+    Then add a <strong>QR code to their headstone</strong> — anyone who visits can scan and discover their full life story.
   </p>
 
-  <div class="d-flex justify-content-center gap-2">
-    <a class="btn btn-primary" href="/get-started" data-route>Get Started</a>
-    <a class="btn btn-outline-primary" href="/how-it-works" data-route>How It Works</a>
+  <div class="d-flex justify-content-center gap-3 mb-3">
+    <a class="btn btn-primary btn-lg px-4" href="/memorial-form" data-route>
+      <i class="fas fa-plus-circle me-2"></i>Create Free Memorial
+    </a>
+    <a class="btn btn-outline-primary btn-lg px-4" href="/how-it-works" data-route>
+      How It Works
+    </a>
+  </div>
+
+  <p class="text-muted small">
+    <i class="fas fa-check-circle text-success me-1"></i> Free to create forever
+    <span class="mx-2">•</span>
+    <i class="fas fa-tag text-success me-1"></i> QR tags from $29
+  </p>
+</section>
+
+<!-- QR Tag Showcase Section -->
+<section class="py-5 bg-light">
+  <div class="container">
+    <div class="text-center mb-5">
+      <h2 class="h3 fw-bold mb-3">Transform Any Headstone Into an Interactive Memorial</h2>
+      <p class="lead text-muted" style="max-width: 800px; margin: 0 auto;">
+        Our weatherproof QR code tags attach to any headstone. Visitors scan with their phone and instantly see the full life story.
+      </p>
+    </div>
+
+    <div class="row align-items-center g-4">
+      <!-- Before/After Visual -->
+      <div class="col-md-6">
+        <div class="card border-0 shadow-sm">
+          <div class="card-body p-4">
+            <h5 class="card-title text-danger mb-3">
+              <i class="fas fa-times-circle me-2"></i>Without Headstone Legacy
+            </h5>
+            <ul class="list-unstyled mb-0">
+              <li class="mb-2"><i class="fas fa-times text-muted me-2"></i> Just a name and dates</li>
+              <li class="mb-2"><i class="fas fa-times text-muted me-2"></i> No photos or stories</li>
+              <li class="mb-2"><i class="fas fa-times text-muted me-2"></i> Family history lost forever</li>
+              <li class="mb-2"><i class="fas fa-times text-muted me-2"></i> Visitors wonder "Who was this person?"</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-6">
+        <div class="card border-0 shadow-sm" style="border-left: 4px solid var(--primary-color) !important;">
+          <div class="card-body p-4">
+            <h5 class="card-title text-success mb-3">
+              <i class="fas fa-check-circle me-2"></i>With Headstone Legacy
+            </h5>
+            <ul class="list-unstyled mb-0">
+              <li class="mb-2"><i class="fas fa-check text-success me-2"></i> Full biography and life story</li>
+              <li class="mb-2"><i class="fas fa-check text-success me-2"></i> Photo gallery and timeline</li>
+              <li class="mb-2"><i class="fas fa-check text-success me-2"></i> Family tree and connections</li>
+              <li class="mb-2"><i class="fas fa-check text-success me-2"></i> Visitors can leave tributes</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="text-center mt-5">
+      <a class="btn btn-primary btn-lg" href="/order-tag" data-route>
+        <i class="fas fa-qrcode me-2"></i>Order Your QR Tag - $29
+      </a>
+      <p class="text-muted small mt-2">Weatherproof • Lifetime guarantee • Free shipping</p>
+    </div>
   </div>
 </section>
 
-<section class="py-4">
-  <h2 class="h4 mb-3">Legacy Map</h2>
-  <div id="homepage-map-container" class="rounded shadow-sm" style="height:420px;"></div>
+<!-- How It Works - Quick Overview -->
+<section class="py-5">
+  <div class="container">
+    <div class="text-center mb-5">
+      <h2 class="h3 fw-bold mb-3">Simple. Meaningful. Permanent.</h2>
+    </div>
+
+    <div class="row g-4 text-center">
+      <div class="col-md-4">
+        <div class="mb-3">
+          <div class="d-inline-flex align-items-center justify-content-center bg-primary text-white rounded-circle" style="width: 80px; height: 80px;">
+            <i class="fas fa-pen-fancy fa-2x"></i>
+          </div>
+        </div>
+        <h5 class="fw-bold">1. Create Memorial</h5>
+        <p class="text-muted">Add photos, stories, and family connections. Takes just 10 minutes. Always free.</p>
+      </div>
+
+      <div class="col-md-4">
+        <div class="mb-3">
+          <div class="d-inline-flex align-items-center justify-content-center bg-primary text-white rounded-circle" style="width: 80px; height: 80px;">
+            <i class="fas fa-qrcode fa-2x"></i>
+          </div>
+        </div>
+        <h5 class="fw-bold">2. Order QR Tag</h5>
+        <p class="text-muted">Get a weatherproof tag with a unique QR code. Attaches to any headstone. $29 one-time.</p>
+      </div>
+
+      <div class="col-md-4">
+        <div class="mb-3">
+          <div class="d-inline-flex align-items-center justify-content-center bg-primary text-white rounded-circle" style="width: 80px; height: 80px;">
+            <i class="fas fa-mobile-alt fa-2x"></i>
+          </div>
+        </div>
+        <h5 class="fw-bold">3. Share Forever</h5>
+        <p class="text-muted">Anyone who visits can scan the code and discover their story. No app needed.</p>
+      </div>
+    </div>
+
+    <div class="text-center mt-5">
+      <a class="btn btn-outline-primary btn-lg" href="/how-it-works" data-route>
+        Learn More <i class="fas fa-arrow-right ms-2"></i>
+      </a>
+    </div>
+  </div>
 </section>
 
-<section class="py-4">
-  <h2 class="h4 mb-3">Famous Memorials</h2>
-  <div id="recent-memorials-container" class="row g-3"></div>
+<!-- Legacy Map Section -->
+<section class="py-5 bg-light">
+  <div class="container">
+    <div class="text-center mb-4">
+      <h2 class="h3 fw-bold mb-3">Memorials Around the World</h2>
+      <p class="text-muted">Explore memorials created by families like yours</p>
+    </div>
+    <div id="homepage-map-container" class="rounded shadow-sm" style="height:420px;"></div>
+  </div>
+</section>
+
+<!-- Final CTA Section -->
+<section class="py-5">
+  <div class="container">
+    <div class="text-center p-5 rounded" style="background: linear-gradient(135deg, var(--primary-color) 0%, var(--secondary-color) 100%);">
+      <h2 class="h3 fw-bold text-white mb-3">Preserve Their Story Before It's Lost</h2>
+      <p class="lead text-white mb-4" style="max-width: 600px; margin: 0 auto;">
+        Join thousands of families honoring their loved ones with digital memorials
+      </p>
+      <a class="btn btn-light btn-lg px-5" href="/memorial-form" data-route>
+        <i class="fas fa-plus-circle me-2"></i>Start Creating Now
+      </a>
+    </div>
+  </div>
 </section>
