--- a/public/pages/memorial-template.html
+++ b/public/pages/memorial-template.html
@@ -83,6 +83,38 @@
         </div>
     </div>
 
+    <!-- Visitor Call-to-Action Section -->
+    <div id="visitor-cta-section" class="container py-5">
+        <div class="row justify-content-center">
+            <div class="col-lg-10">
+                <div class="card border-0 shadow-lg" style="background: linear-gradient(135deg, var(--primary-color) 0%, var(--secondary-color) 100%);">
+                    <div class="card-body p-5 text-center text-white">
+                        <h3 class="fw-bold mb-3">
+                            <i class="fas fa-heart me-2"></i>
+                            Create a Memorial for Your Loved One
+                        </h3>
+                        <p class="lead mb-4" style="max-width: 600px; margin: 0 auto;">
+                            Honor your family members with a beautiful digital memorial. Add photos, stories, and family connections — just like this one.
+                        </p>
+                        <div class="d-flex flex-column flex-sm-row gap-3 justify-content-center">
+                            <a href="/memorial-form" class="btn btn-light btn-lg px-4" data-route>
+                                <i class="fas fa-plus-circle me-2"></i>Create Free Memorial
+                            </a>
+                            <a href="/how-it-works" class="btn btn-outline-light btn-lg px-4" data-route>
+                                <i class="fas fa-info-circle me-2"></i>How It Works
+                            </a>
+                        </div>
+                        <p class="mt-3 mb-0 small opacity-75">
+                            <i class="fas fa-check-circle me-1"></i> Free forever
+                            <span class="mx-2">•</span>
+                            <i class="fas fa-qrcode me-1"></i> Add QR code tag for $29
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div id="no-memorial-message" class="text-center py-5" style="display: none;">
         <h2>Memorial Not Found</h2>
         <p>The memorial you are looking for does not exist or may have been removed.</p>
