--- a/public/pages/admin.html
+++ b/public/pages/admin.html
@@ -88,6 +88,12 @@
                 </button>
             </li>
             <li class="nav-item" role="presentation">
+                <button class="nav-link" id="orders-tab" data-bs-toggle="tab" data-bs-target="#orders-panel" type="button">
+                    <i class="fas fa-shopping-cart me-2"></i>Orders
+                    <span class="badge bg-success ms-2" id="orders-badge" style="display: none;">0</span>
+                </button>
+            </li>
+            <li class="nav-item" role="presentation">
                 <button class="nav-link" id="notes-tab" data-bs-toggle="tab" data-bs-target="#notes-panel" type="button">
                     <i class="fas fa-sticky-note me-2"></i>Notes
                 </button>
@@ -325,6 +331,96 @@
                             <p class="text-muted">No tributes match this filter.</p>
                         </div>
                         <div id="tributes-list" style="display: none;"></div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- ==================== ORDERS PANEL ==================== -->
+            <div class="tab-pane fade" id="orders-panel" role="tabpanel">
+                <!-- Orders Stats -->
+                <div class="row g-3 mb-4">
+                    <div class="col-md-3">
+                        <div class="card bg-warning bg-opacity-10">
+                            <div class="card-body text-center">
+                                <h4 class="mb-0 text-warning" id="orders-pending">0</h4>
+                                <small class="text-muted">Pending</small>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="card bg-info bg-opacity-10">
+                            <div class="card-body text-center">
+                                <h4 class="mb-0 text-info" id="orders-paid">0</h4>
+                                <small class="text-muted">Paid (Ready to Ship)</small>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="card bg-success bg-opacity-10">
+                            <div class="card-body text-center">
+                                <h4 class="mb-0 text-success" id="orders-shipped">0</h4>
+                                <small class="text-muted">Shipped</small>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="card bg-primary bg-opacity-10">
+                            <div class="card-body text-center">
+                                <h4 class="mb-0 text-primary" id="orders-revenue">$0</h4>
+                                <small class="text-muted">Total Revenue</small>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Filter Buttons -->
+                <div class="d-flex gap-2 mb-4">
+                    <button class="btn btn-info active" data-filter="paid" id="order-filter-paid">
+                        <i class="fas fa-clock me-2"></i>Ready to Ship
+                    </button>
+                    <button class="btn btn-outline-warning" data-filter="pending" id="order-filter-pending">
+                        <i class="fas fa-hourglass me-2"></i>Pending Payment
+                    </button>
+                    <button class="btn btn-outline-success" data-filter="shipped" id="order-filter-shipped">
+                        <i class="fas fa-truck me-2"></i>Shipped
+                    </button>
+                    <button class="btn btn-outline-secondary" data-filter="all" id="order-filter-all">
+                        <i class="fas fa-list me-2"></i>All
+                    </button>
+                </div>
+
+                <!-- Orders Table -->
+                <div class="card">
+                    <div class="card-header">
+                        <h5 class="mb-0">QR Tag Orders</h5>
+                    </div>
+                    <div class="card-body p-0">
+                        <div id="orders-loading" class="text-center py-5">
+                            <div class="spinner-border text-primary"></div>
+                            <p class="mt-2 text-muted">Loading orders...</p>
+                        </div>
+                        <div id="orders-empty" class="text-center py-5" style="display: none;">
+                            <i class="fas fa-shopping-cart fa-3x text-muted mb-3"></i>
+                            <h5>No Orders</h5>
+                            <p class="text-muted">No orders match this filter.</p>
+                        </div>
+                        <div class="table-responsive" id="orders-table-container" style="display: none;">
+                            <table class="table table-hover mb-0">
+                                <thead class="table-light">
+                                    <tr>
+                                        <th>Order #</th>
+                                        <th>Memorial</th>
+                                        <th>Customer</th>
+                                        <th>Shipping Address</th>
+                                        <th>Amount</th>
+                                        <th>Status</th>
+                                        <th>Date</th>
+                                        <th class="text-end">QR Code</th>
+                                    </tr>
+                                </thead>
+                                <tbody id="orders-tbody"></tbody>
+                            </table>
+                        </div>
                     </div>
                 </div>
             </div>
